@@ -23,9 +23,6 @@ my $build = Module::Build::My->new(
         'Plack'                 => 0.9920,
         $Config{useithreads} ? ('threads' => 1.73) : ('forks' => 0),
     },
-    recommends              => {
-        $^O eq 'cygwin' ? ('Win32::Process' => 0) : (),
-    },
     suggests                => {
         'IO::Socket::IO'        => 0,
         'IO::Socket::SSL'       => 0,
